# Abroadly-Demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ESSENTIAL_FILES.md  QUICK_START.md  README.md  TESTING.md  pyproject.toml  pytest.ini  railway.json  run_tests.sh  seed_data.py  start-backend.ps1  start-frontend.ps1
abroadly/: README.md  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.js
abroadly/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts  setupTests.ts
app/: __init__.py  config.py  db.py  deps.py  main.py  models.py
app/ai/: __init__.py  routes.py
app/auth/: __init__.py  jwt.py  magic.py  routes.py
app/bookmarks/: __init__.py  routes.py
app/messages/: __init__.py  routes.py
app/places/: __init__.py  routes.py
app/programs/: __init__.py  routes.py
app/trips/: __init__.py  routes.py
code_review_package/: README.md  test_suite_documentation.md
docs/: API.md  README.md  data_model_diagram.md
migrations/: env.py
migrations/versions/: 1f9e4b6e219c_add_price_range_to_places.py  347b8cb81db7_add_bookmark_tables.py  3c7733ba5c52_add_message_table_for_peer_messaging.py  4e742b979bdd_add_user_profile.py  81e660d3fa35_add_program_place_and_trip_models.py  89c0c4a35e91_merge_upstream_migrations.py  add_review_voting.py  b6cf0d5e1ffd_add_user_id_to_trips.py  de59ef35f297_add_user_id_to_programs_and_places.py  f6018f701c48_init.py  (+1 more)
sprint_logs/: sprint1.md  sprint2.md  sprint3.md
tests/: conftest.py  test_auth.py  test_integration.py  test_places.py  test_programs.py  test_trips.py
(+52 files in other folders)
