[project]
name = "abroadly"
version = "0.1.0"
description = "Abroadly - Peer-verified study abroad platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "itsdangerous>=2.2.0",
    "PyJWT>=2.9.0",
    "email-validator>=2.3.0",
    "resend>=2.4.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.16.5",
    "requests>=2.32.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "openai>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
